# algorithmic

./: CMakeLists.txt
include/algorithmic/algorithms/: PerlinNoise2D.hpp  sqrt.hpp
src/: main.cpp
src/algorithms/: PerlinNoise2D.cpp  sqrt.cpp
